--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Node modules
-node_modules/
-
-# Environment variables
-.env
+# Backend
+/backend/node_modules/
+/backend/.env
+/frontend/node_modules
+/frontend/.env
