--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Backend
 /backend/node_modules/
 /backend/.env
-/frontend/node_modules
+
+#  frontend ignores
+/frontend/node_modules/
 /frontend/.env
